--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                         <h2>About SRIKANTH</h2>
                         <p> Hello! I'm SRIKANTH, a passionate web developer based in TRICHY. With a strong foundation in both front-end and back-end technologies, I specialize in creating dynamic and responsive websites that provide an engaging user experience. </p>
 						<p>I began my journey into web development 1 years ago, drawn by the endless possibilities of building and designing for the web. Over the years, I have honed my skills in HTML, CSS, JavaScript, and various frameworks such as React, Angular, Vue.js. I also have experience with back-end technologies like Node.js, PHP, Python and databases such as MySQL, MongoDB..</p>
-
-                        <a href="#" class="sim-btn btn-hover-new" data-text="Download CV"><span>Download CV</span></a>
+                        <p>Expertise in circuit design, software tools like MATLAB or AutoCAD, or practical experience in renewable energy systems.</p>
+                       <!-- <a href="#" class="sim-btn btn-hover-new" data-text="Download CV"><span>Download CV</span></a>-->
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
